[project]
name = "astrbot-plugin-agno"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.4.8",
    "astrbot>=4.14.8",
    "fastapi[standard]>=0.128.5",
]


 [[tool.uv.index]]
 url = "https://mirrors.aliyun.com/pypi/simple/"
 default = true

[project.optional-dependencies]
dev = ["mypy", "ruff"]
